[package]
name = "rules"
version = "0.1.0"
authors = ["lemonxah <lemon.xah@gmail.com>"]
edition = "2018"

[dependencies]
jwt = "0.10.0"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }
rocket_cors = "0.5.2"
serde = "1.0.123"
serde_json = "1.0.64"
serde_derive = "1.0.123"
tokio = { version = "1.2.0", features = ["full"] }
mongodb = { version = "1.2.0", default-features = false, features = ["sync"] }
bson = "1.2.0"
hmac = "0.8.1"
sha2 = "0.9.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust-crypto = "0.2.36"

handlebars = "3.5.3"
js-sandbox = "0.1.5"

d3ne = "0.5.3"
funlib = "0.1.7"
querylib = { version = "0.3.0", features = ["mongo", "parse"] }
anyhow = "1.0.40"
thiserror = "1.0.24"
regex = "1.5.4"

[[bin]]
name = "rules"
path = "src/main.rs"
